# pokerena

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  noxfile.py  pyproject.toml  simulate.py
.github/workflows/: ci-reusable.yml  ci.yml  publish.yml
docs/: cli.md  index.md
docs/api/: battle.md  cache.md  console.md  loader.md  models.md  pokeapi.md  runner.md  smogon.md  stats.md  types.md  writers.md
pokerena/: __init__.py  cli.py  models.py
pokerena/data/: cache.py  loader.py  pokeapi.py  smogon.py
pokerena/engine/: battle.py  rules.py  stats.py  types.py
pokerena/report/: console.py  writers.py
pokerena/tournament/: runner.py
tests/: conftest.py  test_battle.py  test_data.py  test_stats.py  test_types.py
