[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokerena"
version = "0.1.0"
description = "Pokemon battle tournament simulator -- runs millions of battles to rank every Pokemon by tier and compare against Smogon placements."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
pokerena = "pokerena.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pokerena*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
