[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokerena"
version = "0.1.0"
description = "Pokemon battle tournament simulator -- runs millions of battles to rank every Pokemon by tier and compare against Smogon placements."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.scripts]
pokerena = "pokerena.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pokerena"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
